Trying to fix overlapping issue among img

--- a/style.css
+++ b/style.css
@@ -55,8 +55,7 @@ p {
 /* Allow overlap */
 #page1 .image-container {
   position: relative;
-  width: fit-content;
-  height: fit-content;
+  display: inline-block;
 }
 
 /* All images are absolutely positioned */
